首页修改/添加搜索框

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
                 <a href="" title="" class="nav-item float-l on">情感专区</a>
                 <a href="" title="" class="nav-item float-l">关于小鹿</a>
             </div>
+            <div class="search float-l">
+                <form action=""> 
+                    <input class="input-text" type="text" placeholder="请输入搜索关键词">
+                    <input class="search-btn" type="submit" value="搜索">
+                </form>
+            </div>
             <div class="header-right float-r clear">
-                <div class="download float-l">
+                <div class="download">
                     <a href="" title="">下载APP</a>
-                </div>
-                <div class="login float-l">
-                    <a href="" title="">登录/注册</a>
                 </div>
             </div>
         </div>
@@ -43,26 +46,31 @@
                             <div class="swiper-slide">
                                 <a class="pic" href="" title="">
                                     <img src="http://img1.huazhen2008.com/exia/banner_2008/1546593380605.jpg" alt="">
+                                    <p>探探上这么聊 怪不得你没女朋友</p>
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a class="pic" href="" title="">
                                     <img src="http://tgoss.huazhen2008.com/2008/img/wechat/question.png" alt="">
+                                    <p>探探上这么聊 怪不得你没女朋友</p>
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a class="pic" href="" title="">
                                     <img src="http://img1.huazhen2008.com/exia/banner_2008/1544666481094.png" alt="">
+                                    <p>探探上这么聊 怪不得你没女朋友</p>
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a class="pic" href="" title="">
                                     <img src="http://img1.huazhen2008.com/exia/banner_2008/1544666452742.png" alt="">
+                                    <p>探探上这么聊 怪不得你没女朋友</p>
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a class="pic" href="" title="">
                                     <img src="http://img1.huazhen2008.com/exia/banner_2008/1544666481094.png" alt="">
+                                    <p>探探上这么聊 怪不得你没女朋友</p>
                                 </a>
                             </div>
                         </div>
