修改头部底部部分样式

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="header clear">
             <a class="logo float-l"></a>
             <div class="nav-list float-l clear">
-                <a href="" title="" class="nav-item float-l">首页</a>
+                <a href="" title="" id="shouye" class="nav-item float-l">首页</a>
                 <a href="" title="" class="nav-item float-l">聊天攻略</a>
                 <a href="" title="" class="nav-item float-l">脱单教程</a>
                 <a href="" title="" class="nav-item float-l">挽回专区</a>
-                <a href="" title="" class="nav-item float-l on">情感专区</a>
+                <a href="" title="" class="nav-item float-l">情感专区</a>
                 <a href="" title="" class="nav-item float-l">关于小鹿</a>
             </div>
             <div class="search float-l">
@@ -894,19 +894,83 @@
     </main>
     <footer>
         <div class="foot">
-            <div class="visit-card">
-                <div class="card-left">
-                    <a href="" title=""><img src="static/images/bottom-logo.png" alt=""></a>
-                    <p class="company"><a href="" title="">北京魅动力教育咨询有限公司</a></p>
+            <div class="foot-left">
+                <ul class="link-list">
+                    <li>
+                        <a href="javascript:" rel="nofollow">聊天攻略</a>
+                        <ul class="link-item">
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="javascript:" rel="nofollow">聊天攻略</a>
+                        <ul class="link-item">
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="javascript:" rel="nofollow">聊天攻略</a>
+                        <ul class="link-item">
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="javascript:" rel="nofollow">聊天攻略</a>
+                        <ul class="link-item">
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="javascript:" rel="nofollow">聊天攻略</a>
+                        <ul class="link-item">
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                            <li><a href="/about" rel="nofollow">微信聊天</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="foot-right">
+                <div class="visit-card">
+                    <div class="card-left">
+                        <a href="" title=""><img src="static/images/bottom-logo.png" alt=""></a>
+                        <!-- <p class="company"><a href="" title="">北京魅动力教育咨询有限公司</a></p> -->
+                    </div>
+                    <div class="card-right">
+                        <a href="">
+                            <p>有情感问题</p>
+                            <p>上小鹿情感</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="card-right">
-                    <a href="">
-                        <p>有情感问题</p>
-                        <p>上小鹿情感</p>
-                    </a>
+                <div class="qrcode">
+                    <div class="qrcode-app">恋爱话术APP
+                        <div class="qrcode-box">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                    <div class="qrcode-wechat">恋爱话术小程序
+                        <div class="qrcode-box">
+                            <img src="static/images/mp-qrcode.jpg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="qrcode-app">
+            
+            <!-- <div class="qrcode-app">
                 <img src="static/images/qrcode1.png" alt="">
                 <p>小鹿情感APP</p>
             </div>
@@ -917,8 +981,12 @@
             <div class="call">
                 <div class="call-num">400-087-2113</div>
                 <p>24小时免费热线</p>
-            </div>
+            </div> -->
         </div>
+        <div class="licence">
+                <p>Copyright © 2014 - <script>document.write(new Date().getFullYear())</script> &nbsp;&nbsp;厦门漫娱网络科技有限公司&nbsp;&nbsp;ixiaolu.com保留最终解释权</p>
+                <p>京ICP备12019625号-13，京公备11010502022064</p>
+            </div>
     </footer>
 </body>
 
