--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
         </div>
     </main>
     <footer>
-        <div class="foot">
+        <div class="foot clear">
             <div class="foot-left">
                 <ul class="link-list">
                     <li>
@@ -951,8 +951,8 @@
                     </div>
                     <div class="card-right">
                         <a href="">
-                            <p>有情感问题</p>
-                            <p>上小鹿情感</p>
+                            <p>20W+撩妹聊天话术</p>
+                            <p>多情景实战案例剖析</p>
                         </a>
                     </div>
                 </div>
