--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                             <a href="" title="">老公出轨妻子聪明做法</a>
                             <a href="" title="">提升6大情感技能轻松脱单</a>
                             <a href="" title="">什么样的婚姻必须放弃</a>
-                            <a href="" title="">女人为什么要结婚</a>
-                            <a href="" title="">教你如何离婚后挽回婚姻</a>
+                            <!-- <a href="" title="">女人为什么要结婚</a>
+                            <a href="" title="">教你如何离婚后挽回婚姻</a> -->
                         </div>
                     </div>
                 </div>
@@ -813,6 +813,12 @@
                                 <li class="talk-item"><a href="" title="">让你掌握婚恋主动权,在选择上更为自由.</a></li>
                             </ul>
                         </div>
+                        <div class="category-pic">
+                            <a href="" title="">
+                                <img src="https://morgoth-aman.ixiaolu.com/emotion_help_scene_category_bhgnslt" alt="">
+                                <p>家庭</p>
+                            </a>
+                        </div>
                         <div class="talk-box">
                             <div class="talk-title"><a href="" title="">你好</a></div>
                             <ul class="talk-list">
@@ -839,6 +845,12 @@
                                 <li class="talk-item"><a href="" title="">让你掌握婚恋主动权,在选择上更为自由.</a></li>
                             </ul>
                         </div>
+                        <div class="category-pic">
+                            <a href="" title="">
+                                <img src="https://morgoth-aman.ixiaolu.com/emotion_help_scene_category_bhgnslt" alt="">
+                                <p>情感</p>
+                            </a>
+                        </div>
                         <div class="talk-box">
                             <div class="talk-title"><a href="" title="">你好</a></div>
                             <ul class="talk-list">
@@ -864,6 +876,12 @@
                                 <li class="talk-item"><a href="" title="">经验丰富的心理学家,情感专家共同协助你提升吸引</a></li>
                                 <li class="talk-item"><a href="" title="">让你掌握婚恋主动权,在选择上更为自由.</a></li>
                             </ul>
+                        </div>
+                        <div class="category-pic">
+                            <a href="" title="">
+                                <img src="https://morgoth-aman.ixiaolu.com/emotion_help_scene_category_bhgnslt" alt="">
+                                <p>成长</p>
+                            </a>
                         </div>
                         <div class="talk-box">
                             <div class="talk-title"><a href="" title="">你好</a></div>
