--- a/index.html
+++ b/index.html
@@ -21,19 +21,26 @@
                 <a href="" title="" class="nav-item float-l">聊天攻略</a>
                 <a href="" title="" class="nav-item float-l">脱单教程</a>
                 <a href="" title="" class="nav-item float-l">挽回专区</a>
-                <a href="" title="" class="nav-item float-l">情感专区</a>
-                <a href="" title="" class="nav-item float-l">关于小鹿</a>
-            </div>
-            <div class="search float-l">
-                <form action=""> 
-                    <input class="input-text" type="text" placeholder="请输入搜索关键词">
-                    <input class="search-btn" type="submit" value="搜索">
-                </form>
+                <a href="" title="" class="nav-item float-l">挽回专区</a>
             </div>
             <div class="header-right float-r clear">
                 <div class="download">
                     <a href="" title="">下载APP</a>
                 </div>
+            </div>
+            <div class="header-right float-r clear">
+                <p class="gongzhong">
+                    <a href="javascript:;">微信公众号</a>
+                    <em class="emm">
+                        <img src="static/images/gongzhonghao.jpg">
+                    </em>
+                </p>
+            </div>
+            <div class="search float-r">
+                <form action="">
+                    <input class="input-text" type="text" placeholder="请输入搜索关键词">
+                    <input class="search-btn" type="submit" value="搜索">
+                </form>
             </div>
         </div>
     </header>
@@ -987,7 +994,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- <div class="qrcode-app">
                 <img src="static/images/qrcode1.png" alt="">
                 <p>小鹿情感APP</p>
@@ -1002,9 +1009,11 @@
             </div> -->
         </div>
         <div class="licence">
-                <p>Copyright © 2014 - <script>document.write(new Date().getFullYear())</script> &nbsp;&nbsp;厦门漫娱网络科技有限公司&nbsp;&nbsp;ixiaolu.com保留最终解释权</p>
-                <p>京ICP备12019625号-13，京公备11010502022064</p>
-            </div>
+            <p>Copyright © 2014 - <script>
+                    document.write(new Date().getFullYear())
+                </script> &nbsp;&nbsp;厦门漫娱网络科技有限公司&nbsp;&nbsp;ixiaolu.com保留最终解释权</p>
+            <p>京ICP备12019625号-13，京公备11010502022064</p>
+        </div>
     </footer>
 </body>
 
